# Cities-API

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: cities.py
app/core/: config.py  dependencies.py  exception_handlers.py  exceptions.py
app/db/: database.py
app/models/: city.py
app/repositories/: city_repository.py  geo_repository.py
app/schemas/: city.py
app/services/: city_service.py  geocoding.py
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: test_cities_service.py
